--- a/2-Collineations.tex
+++ b/2-Collineations.tex
@@ -949,7 +949,7 @@
 
 \section{Transitivity and Translation Planes}
 
-\begin{defn}
+\begin{defn}\label{defn:(C,a)-transitive}
     A projective plane is \textsl{$(C,\block{a})$-transitive} if for any pair of points $(P,P')$ such that $P \ne C \ne P'$, with neither $P$ nor $P'$ lying on $\block{a}$, and $C$, $P$, $P'$ collinear, there exists a unique $\alpha \in \Aut(C,\block{a})$ such that $\alpha(P) = P'$.
 \end{defn}
 
