--- a/preamble.tex
+++ b/preamble.tex
@@ -8,6 +8,8 @@
 \usepackage{amsmath}
 \usepackage[shortlabels]{enumitem}
 %\usepackage{supertabular}
+%\usepackage{supertabular}
+\usepackage{xparse}
 \usepackage{mathtools}
 \usepackage{amssymb}
 \usepackage{array}
@@ -425,3 +427,4 @@
     \textcolor{#1}{\overline{\textcolor{saved@color}{#2}}}%
     \endgroup
 }
+
